--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-typescript": "^8.2.5",
     "prettier": "^2.4.1",
     "rollup": "^2.56.3",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   }
